create basic template block copyright

--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -50,3 +50,10 @@
 
 <!-- index.html content ends here -->
 {% endblock %}
+
+<!-- index.html copyright starts here -->
+{% block copyright %}
+    Copyright 2023 Matt Edwards
+{% endblock copyright %}
+
+<!-- index.html copyright ends here -->
