--- a/templates/base.html
+++ b/templates/base.html
@@ -73,9 +73,30 @@
             </div>
         </div>
     </nav>
+    <!-- displaying Django messages -->
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible
+                fade show" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
 
     <main class="flex-shrink-0 main-bg">
 
+        {% if user.is_authenticated %}
+        <p class="text-end text-muted m-3">
+            You are Logged in as {{ user.username }}
+        </p>
+        {% else %}
+        <p class="text-end text-muted m-3">You are not Logged in</p>
+        {% endif %}
         {% block content %}
         <!-- Content Goes here -->
         {% endblock content %}
@@ -101,6 +122,9 @@
     </script>
     <!-- Custom JavaScript -->
     <script src="{% static 'js/script.js' %}"></script>
+    
+    {% block extras %}
+    {% endblock %}
 </body>
 
 </html>
